--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -2,7 +2,7 @@
 layout: default
 title: Contact
 nav: contact
-description: "Contact SKACULT / DocAdam."
+description: "Contact skaCULT / DocAdam."
 ---
 
 <h1>Contact</h1>
