--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <!-- _includes/footer.html -->
 <footer class="footer container">
   <div class="footer-inner">
-    <span>© {{ "now" | date: "%Y" }} SKACULT</span>
+    <span>© {{ "now" | date: "%Y" }} skaCULT</span>
     <span class="footer-links">
       <a href="https://github.com/DocAdam" rel="me">GitHub</a>
     </span>
