--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,7 +1,7 @@
 <!-- _includes/nav.html -->
 <nav class="navbar">
   <div class="nav-left">
-    <a class="brand" href="/" aria-label="SKACULT home">SKACULT</a>
+    <a class="brand" href="/" aria-label="skaCULT home">skaCULT</a>
   </div>
 
   <div class="nav-right">
