--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>{% if page.title %}{{ page.title }} · {% endif %}{{ site.title }}</title>
     <meta name="description" content="{{ page.description | default: site.description }}" />
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="/style.css?v={{ site.time | date: '%s' }}" />
   </head>
 
   <body>
@@ -47,7 +47,7 @@
     {% include about-drawer.html %}
     {% include footer.html %}
 
-    <script src="/assets/drawer.js"></script>
-    <script src="/assets/toc.js"></script>
+    <script src="/assets/drawer.js?v={{ site.time | date: '%s' }}"></script>
+    <script src="/assets/toc.js?v={{ site.time | date: '%s' }}"></script>
   </body>
 </html>
